Fix grid alignment in mobile

--- a/components/goal-grid/index.css
+++ b/components/goal-grid/index.css
@@ -33,7 +33,7 @@
   display: block;
   float: left;
   width: 50%;
-  padding: calc(var(--gutter, 0.625rem) / 2) calc(var(--gutter, 0.625rem) / 2) 0;
+  padding: calc(var(--gutter, 0.625rem) / 2) calc(var(--gutter, 0.625rem) / 2);
   position: relative;
   transform: scale(1);
   transition: transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
